test/mpi/errors/cxx/io/Makefile.sm
INCLUDES = -I../../../include -I${srcdir}/../../../include
DEPADD = @MPILIBLOC@ 
smvar_do_sharedlibs = 0

fileerrretx_SOURCES   = fileerrretx.cxx

